# http

./: .gitignore  Makefile.am  NEWS  README  README.md  TODO  configure.ac
curl/: Makefile.am  curl.c  curl.h  main.c
lib/: Makefile.am  core.c  helper.h  slist.c  slist.h  sstring.c  sstring.h  test.c
lib/include/: clib.h
lib/include/clib/: core.h  quark.h  sstring.h
src/: Makefile.am  http.c  http.h  http_conn.c  http_conn.h  http_errno.h  http_message.c  http_message.h  http_request.c  http_request.h  tcp.c  tcp.h  url.c  url.h
tests/: Makefile.am  quark_test.c  resolve.c
